<resources>
    <string name="app_name">To-Do List</string>
    <string name="action_settings">Remove all</string>
    <string name="task_name">Name</string>
    <string name="task_content">Content</string>
    <string name="add_task_name">Name</string>
    <string name="add_task_content">Content</string>
    <string name="add_task_btn">Add</string>
    <string name="edit_task_name_hint">Name</string>
    <string name="edit_task_content_hint">Content</string>
    <string name="edit_task_btn">Edit</string>
</resources>
